--- a/build.gradle
+++ b/build.gradle
@@ -1,57 +1,78 @@
+// Gradle 빌드 파일: Spring Boot 프로젝트의 의존성, 플러그인, 태스크 설정을 정의
+// 프로젝트명: mokuroku, 회원 관리 및 이메일 검증 기능 포함
+
+// 플러그인 설정
 plugins {
-	id 'java'
-	id 'org.springframework.boot' version '3.5.3'
-	id 'io.spring.dependency-management' version '1.1.7'
+    // Java 플러그인: Java 프로젝트 빌드 지원
+    id 'java'
+    // Spring Boot 플러그인: Spring Boot 애플리케이션 빌드, 실행, 패키징 지원
+    // id 'org.springframework.boot' version '3.2.5'
+    id 'org.springframework.boot' version '3.5.3'
+    // Spring 의존성 관리 플러그인: Spring Boot BOM(Bill of Materials)으로 의존성 버전 관리
+    id 'io.spring.dependency-management' version '1.1.7'
+    // JaCoCo 플러그인: 테스트 커버리지 측정 및 리포트 생성
+    id 'jacoco'
 }
 
+// 프로젝트 그룹 ID: Maven 아티팩트 식별자
 group = 'com.mokuroku'
+// 프로젝트 버전: SNAPSHOT은 개발 중임을 나타냄
 version = '0.0.1-SNAPSHOT'
 
+// Java 설정: Java 17 사용
 java {
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(17)
-	}
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
 }
 
+// 컴파일 전용 의존성 설정: annotationProcessor를 compileOnly에 포함
 configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
-	}
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
 }
 
+// 의존성 저장소: Maven Central에서 의존성 다운로드
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
+// 프로젝트 의존성 정의
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-	implementation 'org.springframework.boot:spring-boot-starter-mail'
-	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-webflux'
-	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation 'org.springframework.boot:spring-boot-starter-mail'
-	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-	implementation 'io.lettuce:lettuce-core'  // 기본 Redis 클라이언트
-	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
-	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'io.lettuce:lettuce-core'
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:2.7.0'
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
-	// S3
-	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+    runtimeOnly 'mysql:mysql-connector-java:8.0.33'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
-	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
-	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // 또는 gson
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
-	compileOnly 'org.projectlombok:lombok'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'com.mysql:mysql-connector-j'
-	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.security:spring-security-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    implementation 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+    testImplementation 'org.projectlombok:lombok'
+    testAnnotationProcessor 'org.projectlombok:lombok'
+
+    // 테스트 의존성: JUnit 5, Mockito, Spring Test 포함
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    // Spring Security 테스트: 보안 관련 테스트 지원
+    testImplementation 'org.springframework.security:spring-security-test'
+    // JUnit Platform 런처: JUnit 5 테스트 실행
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 tasks.named('test') {
